[gd_scene load_steps=5 format=3 uid="uid://10bjel6qpxqq"]

[ext_resource type="Script" path="res://scripts/Holes.gd" id="1_bgr3q"]
[ext_resource type="FontFile" uid="uid://d2wfak0byw7ur" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_s6pon"]
[ext_resource type="Texture2D" uid="uid://duan7g4nro34s" path="res://assets/Sprites/Desktop icons/Holes.png" id="3_tnb2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syf1g"]
size = Vector2(24, 6)

[node name="Holes" type="StaticBody2D"]
script = ExtResource("1_bgr3q")

[node name="Label" type="Label" parent="."]
offset_left = -33.0
offset_top = 41.0
offset_right = 35.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.811765, 0.776471, 0.72549, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.137255, 0.109804, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.137255, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_s6pon")
theme_override_font_sizes/font_size = 8
text = "Holes.png"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_tnb2i")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 48.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_syf1g")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
